fixing view options toggle on mobile

--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -61,7 +61,6 @@
 	}
 }
 
-
 .explore-plot-tab-content {
 	background: #fff;
 }
@@ -70,9 +69,27 @@
 	border: none;
 	background: none;
 	font-weight: bold;
+}
+
+.desktop-view-options {
 	position: absolute;
 	top: 10px;
 	right: 2em;
+}
+
+.mobile-view-options {
+	display: none;
+}
+
+@media (max-width: 991.98px) {
+	.mobile-view-options {
+		display: block;
+		text-align: center;
+		padding-top: 1em;
+	}
+	.desktop-view-options {
+		display: none;
+	}
 }
 
 
